# recovar-seiscomp

./: README.md  demo.ipynb  demo_website.ipynb  environment.yml  pyproject.toml
.github/workflows/: deploy-docs.yml
_build/logs/: myst.build.json
data/: test.mseed
docs/: index.md  mseed.md  myst.yml
mseed_demo/: create_test_mseed.py  model_test_mseed.ipynb  mseed_predictor.py
recovar_demo/: model_test.ipynb  model_train.ipynb
seiscomp_integration/: README.md  create_test_archive.py  install.sh  query_scored_picks.py  recovar_pick_filter.py  recovar_pick_filter.py.init
seiscomp_integration/docker/: DEMO.md  Dockerfile  INSTALL.md  OVERVIEW.md  README.md  entrypoint.sh
